mobile-server/deployment/roles/bitmark-mobile/templates/mobile-db.yaml
apiVersion: v1
kind: Service
metadata:
  name: bitmark-mobile-db
  namespace: mobile
  labels:
    app: bitmark-mobile-db
spec:
  ports:
  - port: 5432
    protocol: TCP
    targetPort: 5432
  selector:
    app: bitmark-mobile-db
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: bitmark-mobile-db
  namespace: mobile
  labels:
    app: bitmark-mobile-db
spec:
  template:
    metadata:
      labels:
        app: bitmark-mobile-db
    spec:
      containers:
      - name: postgres
        image: postgres:10-alpine
        ports:
        - name: postgres
          containerPort: 5432
        volumeMounts:
        - name: db-data
          mountPath: /var/lib/postgresql/data
          subPath: pgdata
        resources:
          requests:
            cpu: 0.25
            memory: 256Mi
        livenessProbe:
          tcpSocket:
            port: 5432
          initialDelaySeconds: 30
          timeoutSeconds: 5
        readinessProbe:
          exec:
            command: ["psql", "postgres", "postgres", "-q", "-c", "select 1"]
          initialDelaySeconds: 5
          periodSeconds: 2
          timeoutSeconds: 1
      volumes:
      - name: db-data
        persistentVolumeClaim:
          claimName: bitmark-mobile-db-pvc
